test/classes/initializers/parentCall/inLoop.good
inLoop.chpl:4: In initializer:
inLoop.chpl:7: error: Both arms of a conditional must use this.init() or super.init() in phase 1
